<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_shipping_method">Selecione o Método de Entrega</string>
    <string name="select_payment_method">Selecione o Metodo de Pagamento</string>
    <string name="txt_total">Total</string>
    <string name="txt_valor">€-</string>
    <string name="txt_checkout">Checkout</string>
    <string name="txt_metodo_de_envio">Metodo de Envio:</string>
    <string name="txt_metodo_de_pagamento">Metodo de Pagamento:</string>
    <string name="txt_efetuar_encomenda">Efetuar Encomenda</string>
    <string name="txt_api_url">API URL</string>
    <string name="txt_ip_api">172.22.21.211</string>
    <string name="txt_confirmar">Confirmar</string>
    <string name="txt_title">Title</string>
    <string name="txt_40">40€</string>
    <string name="txt_detalhes">Detalhes</string>
    <string name="txt_descricao">Um bolo de chocolate é uma delícia tentadora que combina uma massa macia e fofa, geralmente de cor escura e rica devido ao cacau ou chocolate utilizado. Sua textura pode variar de úmida a aerada, dependendo da receita.</string>
    <string name="txt_nomeproduto">NomeProduto</string>
    <string name="txt_preco">Preço</string>
    <string name="txt_iva">IVA</string>
    <string name="txt_quantidade">Quantidade</string>
    <string name="txt_totalvalor">Total</string>
    <string name="txt_informacoes_da_fatura">Informações da Fatura</string>
    <string name="txt_welcome_to_amai_app">Welcome to Amai APP</string>
    <string name="txt_sabores_deliciosos_seu_desejo_doce_agora_em_cada_pedido">Sabores Deliciosos! Seu Desejo Doce, Agora em Cada Pedido!</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_intro_login">Login</string>
    <string name="txt_faturas">Faturas</string>
    <string name="txt_amai">AMAI</string>
    <string name="txt_app">App</string>
    <string name="txt_kaka">kaka</string>
    <string name="txt_password_login">123123123</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_editar_dados">Editar Dados</string>
    <string name="txt_data_de_nascimento">Data de Nascimento:</string>
    <string name="txt_data_nascimento">01 JAN 2000</string>
    <string name="txt_atualizar_dados">Atualizar dados</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_amai_signup">AMAI</string>
    <string name="txt_app_signup">App</string>
    <string name="txt_btn_signup">Signup</string>
    <string name="txt_ja_tens_conta">Já tens conta?</string>
    <string name="txt_login_signup">Login</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="txt_username_home_page">Username</string>
    <string name="txt_bem_vindo">Bem-vindo</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_ver_todos">Ver Todos</string>
    <string name="txt_perfil_username">Username</string>
    <string name="txt_perfil_primeiro_nome">Primeiro Nome</string>
    <string name="txt_perfil_apelido">Apelido</string>
    <string name="txt_perfil_email">Email</string>
    <string name="txt_perfil_d_pessoais">D. Pessoais</string>
    <string name="txt_perfil_d_morada">D. Morada</string>
    <string name="txt_perfil_ver_faturas">Ver Faturas</string>
    <string name="txt_perfil_telemovel">Telemóvel:</string>
    <string name="txt_perfil_nif">NIF:</string>
    <string name="txt_perfil_genero">Género:</string>
    <string name="txt_perfil_data_de_nascimento">Data de Nascimento:</string>
    <string name="txt_btn_editar_perfil">Editar Perfil</string>
    <string name="txt_title_produto">title</string>
    <string name="txt_produto_valor">0€</string>
    <string name="txt_carrinho_title">Title</string>
    <string name="txt_carrinho_produto_valor">0€</string>
    <string name="txt_quantidade_produto">0</string>
    <string name="txt_menos">-</string>
    <string name="txt_mais">+</string>
    <string name="txt_fatura">Fatura 01</string>
    <string name="txt_data_fatura">14/05/2020</string>
    <string name="txt_fatura_valor">Valor</string>
    <string name="txt_produto_title">Title</string>
    <string name="txt_detalheproduto_valor">0€</string>
    <string name="txt_produtonome_title">Title</string>
    <string name="txt_valorproduto">0€</string>
    <string name="txt_linhafatura_name">Name</string>
    <string name="txt_linhafatura_price">Price</string>
    <string name="txt_linhafatura_iva">IVA</string>
    <string name="txt_linhafatura_quantity">Quantity</string>
    <string name="txt_linhafatura_total">Total</string>
    <string name="hint_api_url">API URL</string>
    <string name="hint_primeiro_nome">Primeiro Nome</string>
    <string name="hint_apelido">Apelido</string>
    <string name="hint_telemovel">Número de Telemóvel</string>
    <string name="hint_nif">NIF</string>
    <string name="hint_rua">Rua</string>
    <string name="hint_localidade">Localidade</string>
    <string name="hint_codigo_postal">Código Postal</string>
    <string name="hint_genero">Selecione o seu género</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
</resources>