<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefinicoesActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_api_url"
        android:textColor="@color/blue_grey"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/apiTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_api_url"
        android:inputType="text"
        android:text="@string/txt_ip_api"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirmar"
        app:layout_constraintEnd_toEndOf="@+id/apiTxt"
        app:layout_constraintStart_toStartOf="@+id/apiTxt"
        app:layout_constraintTop_toBottomOf="@+id/apiTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>