<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"

    app:cardBackgroundColor="@android:color/darker_gray"
    app:cardElevation="3dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="16dp">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">


            <TextView
                android:id="@+id/tvNomeFatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/txt_fatura"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDataFatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/txt_data_fatura"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvValorFatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/txt_fatura_valor"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
